about Casey project/2

--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
     <title>About Casey</title>
 </head>
+<h1>About Casey</h1>
+<img src = "https://cdn.narendramodi.in/cmsuploads/0.62549900_1497094458_636.jpeg" alt="yoga">
+<meta charset="utf-8"/>
 <body>
-  <h1>About Casey</h1>
+
+    <P>
+        <div>
+        Hello,
+         I am Casey Preston. I have two boys and live in Rio Rancho New Mexico.
+         I home school my youngest son and thought I
+         would try this bootcamp during the summer. I like yoga, walking and riding bikes,
+         I also like to watch my boys
+         (husband included) play video games.
+    </div>
+    </P>
+
 </body>
 </html>
