about Casey project/4

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
 
     <P>
-        Hello,
-         I am Casey Preston. I have two boys and live in Rio Rancho New Mexico.
-         I home school my youngest son and thought I
-         would try this bootcamp during the summer. I like yoga, walking and riding bikes,
+       <div>Hello,</div>
+
+         I am Casey Preston. <br>
+    I have two boys and live in Rio Rancho New Mexico.<br>
+         I home school my youngest son and thought I <br>
+         would try this bootcamp during the summer.<br>
+    I like yoga, walking and riding bikes,<br>
          I also like to watch my boys
          (husband included) play video games.
     </P>
