added a different photo and put the paragraph into an unordered list

--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <title>About Casey</title>
 </head>
 <h1>About Casey</h1>
-<img src = "https://cdn.narendramodi.in/cmsuploads/0.62549900_1497094458_636.jpeg" alt="yoga">
+<img src ="51445026-stock-vector-vector-silhouette-of-yoga-woman-with-white-decorative-pattern-bright-colorful-watercolor-texture-in-.jpg" alt="yoga">
 <meta charset="utf-8"/>
 <body>
 
-    <P>
+    <p>
        <div>Hello,</div>
-
-         I am Casey Preston. <br>
-         I have two boys and live in Rio Rancho New Mexico.<br>
-         I home school my youngest son and thought I <br>
-         would try this bootcamp during the summer.<br>
-         I like yoga, walking and riding bikes,<br>
-         I also like to watch my boys
-         (husband included) play video games.
-    </P>
+<ul>
+    <li>I am Casey Preston. </li>
+    <li>I have two boys and live in Rio Rancho New Mexico.</li>
+    <li>I home school my youngest son and thought I would try this bootcamp during the summer.</li>
+    <li>I like yoga, walking and riding bikes,</li>
+    <li>I also like to watch my boys (husband included) play video games.</li>
+</ul>
+    </p>
 
 </body>
 </html>
