added a different photo and put the paragraph into a list

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
     <p>
        <div>Hello,</div>
+
 <ul>
-    <li>I am Casey Preston. </li>
+    <li>I am Casey Preston. hello </li>
     <li>I have two boys and live in Rio Rancho New Mexico.</li>
     <li>I home school my youngest son and thought I would try this bootcamp during the summer.</li>
     <li>I like yoga, walking and riding bikes,</li>
