added a different photo and put the paragraph into a list as well as changed the color of the header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>About Casey</title>
 </head>
-<h1>About Casey</h1>
+<h1 style="color: darkorchid;">About Casey</h1>
 <img src ="51445026-stock-vector-vector-silhouette-of-yoga-woman-with-white-decorative-pattern-bright-colorful-watercolor-texture-in-.jpg" alt="yoga">
 <meta charset="utf-8"/>
 <body>
@@ -12,7 +12,7 @@
        <div>Hello,</div>
 
 <ul>
-    <li>I am Casey Preston. hello </li>
+    <li>I am Casey Preston. </li>
     <li>I have two boys and live in Rio Rancho New Mexico.</li>
     <li>I home school my youngest son and thought I would try this bootcamp during the summer.</li>
     <li>I like yoga, walking and riding bikes,</li>
