added multiple photos and changed some text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>About Casey</title>
 </head>
 <h1 style="color: darkorchid;">About Casey</h1>
-<img src ="51445026-stock-vector-vector-silhouette-of-yoga-woman-with-white-decorative-pattern-bright-colorful-watercolor-texture-in-.jpg" alt="yoga">
+
 <meta charset="utf-8"/>
 <body>
 
@@ -13,12 +13,14 @@
 
 <ul>
     <li>I am Casey Preston. </li>
-    <li>I have two boys and live in Rio Rancho New Mexico.</li>
+    <li>I have two bikes and live in Rio Rancho New Mexico.</li>
     <li>I home school my youngest son and thought I would try this bootcamp during the summer.</li>
-    <li>I like yoga, walking and riding bikes,</li>
-    <li>I also like to watch my boys (husband included) play video games.</li>
+    <li>I like yoga and walking bikes</li>
+    <li>I also like to watch my bikes (husband included) play video games.</li>
 </ul>
     </p>
+<img src="BAG4-sequence1_2048x2048.jpg" alt ="bikes" width ="300" height ="275">
+<img src="HTB1JVKblRmWBuNkSndVq6AsApXac.jpg" alt ="bike2">
 
 </body>
 </html>
